objects/lightningbuddy__Welcome_Mat_Tile__c.object
<CustomObject>
    <description>Represents a tile in the Welcome mat action</description>
    <fields>
        <fullName>lightningbuddy__Action__c</fullName>
        <label>Action</label>
        <referenceTo>lightningbuddy__Actions__c</referenceTo>
        <relationshipLabel>Welcome Mat Tiles</relationshipLabel>
        <relationshipName>Welcome_Mat_Tiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Icon__c</fullName>
        <label>Icon</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Welcome Mat Tile</label>
    <nameField>
        <displayFormat>WMT-{000000}</displayFormat>
        <label>Welcome Mat Tile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Mat Tiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>